Fixed copyright section mobile view bug

--- a/src/components/copyright/copyright.css
+++ b/src/components/copyright/copyright.css
@@ -30,3 +30,9 @@
     color: var(--maroon);
 
 }
+
+@media screen and (max-width: 767px) {
+    .copyright {
+        display: none;
+    }
+}
